# PrIntFuzz

./: .gitignore  .gitmodules  README.md
config/buildroot/: config
config/docker/: Dockerfile
config/linux/: enable_config.json
config/linux/firmware/: README  bfubase.frm  dvb-usb-opera-01.fw  isight.fw  orinoco_ezusb_fw
config/linux/firmware/mixart/: Makefile.am  README  miXart.conf
config/linux/firmware/pcxhr/: Makefile.am  README  pcxhr.conf  pcxhr0.conf  pcxhr1.conf  pcxhr2.conf  pcxhr3.conf  pcxhr4.conf  pcxhr5.conf
config/qemu/: qemu.json
config/syzkaller/: devices.json  enable_syscalls.json
patch/: build_linux_all.patch  linux.patch  linux_host.patch  llvm_fault_injection.patch  qemu.patch
scripts/python/: gen_syz_config.py  qemu.py  setup.py
scripts/python/evaluation/: fuzz.py  probe.py
scripts/python/utils/: __init__.py  create_fake_devices.py  enable_config.py  environment.py  file_to_config.py  gen_llvm_bc_json.py  gen_syz_template.py
scripts/shell/: ar.sh  clang.sh  common.sh  ld.sh  make_rootfs.sh  make_ubuntu.sh  objcopy.sh
static_analyzer/: CMakeLists.txt
static_analyzer/include/analyzer/: analyzer.h  pci_id.h  property.h
static_analyzer/include/support/: debuger.h  json_read_write.h
static_analyzer/src/: CMakeLists.txt
static_analyzer/src/analyzer/: CMakeLists.txt  analyzer.cpp  pci_id.cpp  property.cpp
static_analyzer/src/interface/: CMakeLists.txt  main.cpp
